@@ -52,3 +52,6 @@ dev.1.0.14.20240531
 dev.1.0.15.20240603
 1. Support parse Tensor.reshape_as 
 2. Add trans_ReshapeAs2Reshape pass
+
+dev.1.0.16.20240605
+1. fix bug of Tensor.index with two inputs
